# ApplicantScout-Companion

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  RELEASE_CHECKLIST.md  RELEASE_NOTES.md  THIRD-PARTY-NOTICES.md  constraints-release.txt  pyproject.toml  pyrightconfig.json  start.bat
.github/workflows/: check.yml  publish-release.yml  release.yml  windows-vs2026-canary.yml
docs/: README.md
packaging/: dependency-license-overrides.toml
packaging/inno/: ApplicantScoutCompanion.iss
packaging/pyinstaller/: run_applicant_scout.py
scripts/: __init__.py  build-windows.ps1  check-release-version.ps1  check.ps1  collect_dependency_licenses.py  export_public_visual_assets.py  manual_wcl_fetch.py  overlay_visual_fixture.py  release-artifact-manifest.ps1  render_overlay_fixture.py  render_settings_dialog_fixture.py  settings_dialog_visual_fixture.py  sign-windows-installer.ps1  visual_fixture_checks.py
scripts/seasonal/: get_mplus_activity_ids.py  get_mplus_challenge_map_ids.py  get_mplus_encounter_ids.py  verify_wcl_season.py
src/applicant_scout/: __main__.py  atomic_io.py  (+18 more)
tests/: test_atomic_io.py  test_compatibility.py  test_config.py  test_constants_group_colour.py  test_dependency_license_collection.py  test_info_panel_widget.py  test_live_snapshot_cache.py  test_manual_wcl_fetch.py  test_metric_preferences.py  test_overlay_accessibility.py  test_overlay_cells.py  test_overlay_fetch_identity.py  test_overlay_html.py  test_overlay_sort.py  test_overlay_tabs.py  test_overlay_visual_fixture.py  test_packaging_contract.py  test_public_visual_assets.py  test_raiderio_local.py  test_role_filter_bar.py  test_scoring.py  test_screenshot.py  test_seasonal_scripts.py  test_settings_dialog.py  test_settings_dialog_visual_fixture.py  test_startup_perf.py  test_state_geometry.py  test_state_machine.py  test_updater.py  test_version_metadata.py  test_wcl.py  test_wow_lifecycle.py
(+5 files in other folders)
